--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   } 
 
 body {
-        
+    border: solid 1px black;
     background-color: white; 
     margin: auto;
     max-width: 960px;
@@ -11,12 +11,87 @@ body {
 
 header {
     background-color: salmon;
-    border: solid 20pxred;
+    border: solid 2px red;
     height: 150px;
+    position: relative;
     
 }
 
-img {
-    float: left;
-    margin: 40px;
+#logo{
+  position: absoute;
+  margin-top: 40px;
+  margin-left: 20px;
+  width: 50px;
+  height: 50px;
+}
+
+.headerwords{
+  position: absolute;
+}
+
+#header_div{
+  border: 1px solid black;
+  height: 150px;
+  position: relative;
+  width: 300px;
+  display: inline-block;
+}
+
+#header1{
+  width: 200px;
+  height: 10px;
+  margin-top: 40px;
+  margin-left: 10px;
+  float: right;
+  border: 1px solid black;
+}
+
+#header2{
+  font-size: 10px;
+  width: 200px;
+  height: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  float: right;
+  border: 1px solid black;
+}
+
+#header_icons{
+  border: 1px green solid;
+  width: 200px;
+  height: 50px;
+  display: inline-block;
+  text-align:right;
+}
+
+section{
+  width: 400px;
+  height: 200px;
+  border: blue 1px solid;
+  float: right;
+}
+
+#section_title{
+  width: 960px;
+  height: 30px;
+  border: blue 1px solid;
+  background: pink;
+  padding-top: 0px;
+}
+
+#under_title{
+  width: 850px;
+  height: 20px;
+  border: blue 1px solid;
+  display: inline-block;
+}
+
+#section_title p{
+  display: inline-block;
+}
+
+h1{
+  height: 50px;
+  border: 1px black solid;
+  margin: 0px;
 }
